MODON MRE BPDEV/force-app/main/default/objects/Checklist_Item_Metadata__c/Checklist_Item_Metadata__c.object-meta.xml
<CustomObject>
    <label>Checklist Item Metadata</label>
    <nameField>
        <displayFormat>CIMN- {0000}</displayFormat>
        <label>Checklist Item Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>