MODON MRE BPDEV/force-app/main/default/objects/Checklist_Item_Metadata__c/fields/Checklist_Item_Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Metadata_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checklist Item Metadata Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>