MODON MRE BPDEV/force-app/main/default/objects/Checklist_Item_Metadata__c/fields/Checklist_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Metadata</label>
    <referenceTo>Checklist_Metadata__c</referenceTo>
    <relationshipLabel>Checklist Item Metadata</relationshipLabel>
    <relationshipName>Checklist_Item_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>